# computing-for-ds-hw7

./: README.md  client_file.py  diabetes_model.joblib  notebook_baseline.py  predict_api.py  pyproject.toml  sample_json.json
predict_diabetes/: LICENSE  README.md  setup.cfg
predict_diabetes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
predict_diabetes/predict_diabetes.egg-info/: PKG-INFO  SOURCES.txt
predict_diabetes/src/predict_diabetes/: __init__.py
predict_diabetes/src/predict_diabetes.egg-info/: SOURCES.txt
predict_diabetes/src/predict_diabetes/load_and_split/: __init__.py  load_and_split.py
predict_diabetes/src/predict_diabetes/metrics/: __init__.py  metrics.py
predict_diabetes/src/predict_diabetes/predict/: __init__.py  predict.py
predict_diabetes/src/predict_diabetes/preprocess/: __init__.py  preprocess.py
predict_diabetes/src/predict_diabetes/train/: __init__.py  train.py
