[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "predict_diabetes"
version = "0.1.0"
description = """predict_diabetes is a Python library designed to streamline the process of analyzing clinical data and predicting diabetes mellitus outcomes.
It provides a modular and reproducible workflow for data preprocessing, exploratory analysis, feature engineering, model training, and evaluation."""
readme = "README.md"
authors = [
  { name = "Sofia Pirogova"},
  { name = "Dmitrii Kuptsov"}
]
requires-python = ">=3.8"
dependencies = [
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/DmitryKuptsov/computing-for-ds-hw4"
