[metadata]
name = predict_diabetes
version = 0.1.0
author = predict_diabetes_team
author_email = dmitrii.kuptsov@bse.eu
description = A modular Python library for diabetes mellitus data analysis and prediction
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/DmitryKuptsov/computing-for-ds-hw4
keywords = diabetes, machine learning, prediction, healthcare, data analysis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=2.0.0
    scikit-learn>=1.3.0

[options.packages.find]
where = src
